<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/home_map"
            android:id="@+id/home_id"
            android:icon="@drawable/home_map_marker"/>

        <item android:title="@string/google"
            android:id="@+id/google_id"
            android:icon="@drawable/google_maps"/>

        <item android:title="@string/positioning"
            android:id="@+id/positioning_id"
            android:icon="@drawable/map_marker_radius"/>

    </group>

    <item android:title="@string/subheader">
        <menu>
            <item android:title="@string/all_locations"
                android:id="@+id/alllocation_id"
                android:icon="@drawable/map_marker_multiple"/>

            <item android:title="@string/add_unit"
                android:id="@+id/addunit_id"
                android:icon="@drawable/map_marker_plus"/>

            <item android:title="@string/proximity"
                android:id="@+id/proximity_id"
                android:icon="@drawable/crosshairs"/>
        </menu>
    </item>

</menu>